syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Blog.Grpc";

service BlogServiceInternal
{
	rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
	rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
	rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
	rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}
}

message CreatePostRequest 
{
  string author = 1;
  string title = 2;
  string content = 3;
 }

message CreatePostResponse 
{
	bool success = 1;
	string errorMessage = 2;
	int32 id = 3;
}

message GetPostRequest
{
	int32 id = 1;
}

message GetPostResponse
{
	bool success = 1;
	string errorMessage = 2;
	string author = 3;
	string title = 4;
	string content = 5;
	google.protobuf.Timestamp date = 6;
}

message DeletePostRequest
{
	int32 id = 1;
}

message DeletePostResponse
{
	bool success = 1;
	string errorMessage = 2;
}

message UpdatePostRequest
{
	int32 id = 1;
	string author = 2;
	string title = 3;
	string content = 4;
}

message UpdatePostResponse
{
	bool success = 1;
	string errorMessage = 2;
}